fix buttons on mobile

--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -15,6 +15,8 @@ h1 {
 }
 
 nav {
+  display: flex;
+  align-items: center;
   margin-right: 20px;
 }
 
@@ -22,4 +24,18 @@ nav {
   vertical-align: middle;
   font-size: 1.25rem;
   padding-right: 10px;
+}
+
+@media screen and (max-width: 500px) {
+  nav {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 5px;
+  }
+  #welcome-user {
+    padding: 5px 0;
+  }
+}
+
+@media screen and (min-width: 501px) and (max-width: 1000px) {
 }
